# AVR-Programming

./: .gitignore  README.md
Chapter02_Programming-AVRs/: CMakeLists.txt  blinkLED.c
Chapter03_Digital-Output/povToy/: CMakeLists.txt  povToy.c
Chapter03_Digital-Output/povToy_1up/: 1up.c  CMakeLists.txt
Chapter03_Digital-Output/povToy_cylonEyes/: CMakeLists.txt  cylonEyes_POV.c
Chapter03_Digital-Output/povToy_invaders/: CMakeLists.txt  invaders.c
Chapter04_Bit-Twiddling/cylonEyes/: CMakeLists.txt  cylonEyes.c
Chapter04_Bit-Twiddling/cylonEyes_16LFSR/: 16LFSR.c  CMakeLists.txt
Chapter04_Bit-Twiddling/cylonEyes_8LFSR/: 8LFSR.c  CMakeLists.txt
Chapter04_Bit-Twiddling/cylonEyes_counting/: CMakeLists.txt  counting.c
Chapter04_Bit-Twiddling/cylonEyes_halfStepping/: CMakeLists.txt  cylonEyes_halfStepping.c
Chapter04_Bit-Twiddling/cylonEyes_naive/: CMakeLists.txt  cylonEyes_native.c
Chapter04_Bit-Twiddling/cylonEyes_quasiRandomToggle/: CMakeLists.txt  quasiRandomToggle.c
Chapter04_Bit-Twiddling/showingOffBits/: CMakeLists.txt  showingOffBits.c
Chapter05_Serial-IO/serialLoopback/: CMakeLists.txt  serialLoopback.c
Chapter05_Serial-IO/serialOrgan/: CMakeLists.txt  organ.c  organ.h  serialOrgan.c
Chapter06_Digital-Input/avrMusicBox/: CMakeLists.txt  USART.h  avrMusicBox.c
Chapter06_Digital-Input/bossButton/: CMakeLists.txt  USART.c  bossButton.c  bossButton.py
Chapter06_Digital-Input/debouncer/: CMakeLists.txt  debouncer.c
Chapter06_Digital-Input/simpleButton/: CMakeLists.txt  simpleButton.c
Chapter06_Digital-Input/toggleButton/: CMakeLists.txt  toggleButton.c
Chapter10_Pulse-Width-Modulation/pwm/: pwm.c  (+1 more)
Chapter19_EEPROM/: blankEEPROM.py
Nano/: Arduino Nano 3.1 BOM.xlsx
(+85 files in other folders)
